--- a/Client_side_app/web/web_app_new.html
+++ b/Client_side_app/web/web_app_new.html
@@ -1,4 +1,11 @@
-<html onclick='wechsel();'><body><button onclick='weiter();'>START RECORDING</button><audio autoplay loop></audio></body>
+<html onclick='wechsel();'><body><button>START RECORDING</button><audio autoplay loop></audio></body>
+
+
+<h1>Wellcome to the respiratory classification</h1>
+<p>{au}</p>
+<button class='one1' onclick='startB();'><div class='one2'></div></button>
+
+
 <style>
 html { background-color:green; background-size:5%;}
 html:active {background-color:#e4e417;}
