--- a/Client_side_app/web/web_app_new.html
+++ b/Client_side_app/web/web_app_new.html
@@ -1,53 +1,109 @@
-<html onclick='wechsel();'><body><button>START RECORDING</button><audio autoplay loop></audio></body>
-
-
+<html><body>
 <h1>Wellcome to the respiratory classification</h1>
-<p>{au}</p>
-<button class='one1' onclick='startB();'><div class='one2'></div></button>
-
-
+<p>This site is linked to a sophisticated neural network able to detect suspicious lung sounds and to classify them. Optionally, you might tell if you 
+	<select>
+		<option style="font-size:20px;">doubt about having a lung disease.</option>
+		<option>think that your lung is healthy.</option>
+		<option>have a diagnosed lung disease.</option>
+	</select> 
+Once you feel ready to forcedly breath through your mouth, breath out and click the start button.</p>
+<button id='one1' onclick='startB();'><div id='one2'></div></button>
+</body>
+<!-- CSS for the initial scenario: //-->
 <style>
 html { background-color:green; background-size:5%;}
-html:active {background-color:#e4e417;}
+body, h1 { font-family: Arial, Helvetica, sans-serif; color:white; text-shadow: 2px 2px 2px black; }
+p { font-size:3vmin; }
+select { -webkit-appearance: none; -moz-appearance: none; appearance: none; padding:5px; font-size:20px; }
 button {
-	height:min(70vw, 70vh);width:min(70vw, 70vh);position:absolute;top:calc(50% - min(35vw, 35vh));left:calc(50% - min(35vw, 35vh));font-size:min(5vw, 5vh);
-	background:#ffffdddd;border-width:0.4em;box-shadow: -0.04em -0.04em 0 0.04em #ffffffbb, inset 0.04em 0.04em 0 0.1em #ffffff77;text-shadow: 0.04em 0.04em 0.04em yellow;
+	position:relative; top:calc(50% - min(35vw, 35vh)); left:calc(50% - min(35vw, 35vh));
+	height:min(70vw, 70vh); width:min(70vw, 70vh); border-radius:50%; border-width:0.4em; font-size:300%;
+	box-shadow: -0.04em -0.04em 0 0.04em #ffffffbb, inset 0.04em 0.04em 0 0.1em #ffffff77;
 }
-button:active {background:white;box-shadow: 0 0 0}
+#one1 { background:#ffffdddd; }
+#one1:active {background:white;box-shadow: 0 0 0}
+#one2::after { content: 'START BUTTON'; }
+</style>
+<!-- CSS for the scenario right after clicking the start button: //-->
+<style>
+#two1 { background:yellow; animation: breath1 16s 2; }
+#two2 {
+	border-radius:50%; display:inline; animation: breath2 16s 2;
+	background:lightblue; color:black; font-size:100%; padding:3em 0.6em;
+}
+#two2::after { content: 'BREATH IN'; animation: breath3 16s 2; }
+@keyframes breath1 {
+	0% { background:yellow; }
+	6.25% { background:yellow; }
+	12.50% { background:conic-gradient(red 0deg, red 22.5deg, yellow 22.5deg); }
+	18.75% { background:conic-gradient(red 0deg, red 45deg, yellow 45deg); }
+	25.00% { background:conic-gradient(red 0deg, red 67.5deg, yellow 67.5deg); }
+	31.25% { background:conic-gradient(red 0deg, red 90deg, yellow 90deg); }
+	37.50% { background:conic-gradient(red 0deg, red 112.5deg, yellow 112.5deg); }
+	43.75% { background:conic-gradient(red 0deg, red 135deg, yellow 135deg); }
+	50.00% { background:conic-gradient(red 0deg, red 157.5deg, yellow 157.5deg); }
+	56.25% { background:conic-gradient(red 0deg, red 180deg, yellow 180deg); }
+	62.50% { background:conic-gradient(red 0deg, red 202.5deg, yellow 202.5deg); }
+	68.75% { background:conic-gradient(red 0deg, red 225deg, yellow 225deg); }
+	75.00% { background:conic-gradient(red 0deg, red 247.5deg, yellow 247.5deg); }
+	81.25% { background:conic-gradient(red 0deg, red 270deg, yellow 270deg); }
+	87.50% { background:conic-gradient(red 0deg, red 292.5deg, yellow 292.5deg); }
+	93.75% { background:conic-gradient(red 0deg, red 315deg, yellow 315deg); }
+	100% { background:conic-gradient(red 0deg, red 337.5deg, yellow 337.5deg); }
+}
+@keyframes breath2 {
+	0% { background:darkblue; color:white; font-size:80%; padding:2.5em 0.6em; }
+	25.00% { background:darkblue; color:white; font-size:80%; padding:2.5em 0.6em; }
+	25.00% { background:lightblue; color:black; font-size:100%; padding:3em 0.6em; }
+	50.00% { background:lightblue; color:black; font-size:100%; padding:3em 0.6em; }
+	50.00% { background:darkblue; color:white; font-size:80%; padding:2.5em 0.6em; }
+	75.00% { background:darkblue; color:white; font-size:80%; padding:2.5em 0.6em; }
+	75.00% { background:lightblue; color:black; font-size:100%; padding:3em 0.6em; }
+	100.00% { background:lightblue; color:black; font-size:100%; padding:3em 0.6em; }
+	100.00% { background:darkblue; color:white; font-size:80%; padding:2.5em 0.6em; }
+}
+@keyframes breath3 {
+	0% { content:'BREATH OUT'; } 25.00% { content:'BREATH OUT'; } 25.00% { content:'BREATH IN'; }
+	50.00% { content:'BREATH IN'; } 50.00% { content:'BREATH OUT'; } 75.00% { content:'BREATH OUT'; }
+	75.00% { content:'BREATH IN'; } 100.00% { content:'BREATH IN'; } 100.00% { content:'BREATH OUT'; }
+}
 </style>
 <script>
-const a = document.getElementsByTagName('audio')[0];
-const h = document.getElementsByTagName('html')[0].style;
-const t = ['audio/mp4','audio/webm','audio/ogg'];
-var re = '';
-var sa = 0;
-function wechsel() { if (sa==0) { return; } if (a.paused===false) { a.pause(); h.backgroundColor = 'grey'; } else { a.play(); h.backgroundColor = 'white'; } }
-function weiter() {
-	if (re.state=='inactive' && sa==0) { 
-		audioChunks = []; re.start(); a.pause(); document.getElementsByTagName('button')[0].innerHTML = 'STOP RECORDING<br><br>and<br><br>START PLAYING';
-		h.backgroundImage = 'url(https://webstockreview.net/images/microphone-clipart-svg-5.png)';
-	} else if (re.state=='recording') {
-		re.stop(); sa = 1; document.getElementsByTagName('button')[0].innerHTML = 'DOWNLOAD MP3<br><br>AUDIO FILE';
-		h.backgroundImage = 'url(https://cdn.iconscout.com/icon/free/png-256/voice-45-470369.png)'; alert('Click the outer surface to pause/play.');
-	} else {
-		var b = document.createElement('a'); b.href = a.src; b.target = '_blank'; b.download = 'AudioNote.wav';	document.body.appendChild(b);
-		b.click(); b.remove(); sa = 0; document.getElementsByTagName('button')[0].innerHTML = 'START RECORDING'; a.pause(); h.backgroundImage = 'none';
-		h.backgroundColor = 'grey';
-	}
-}
+// Main global constants and variables
+const mimeT = ['audio/mp4','audio/webm','audio/ogg'];
+audioChunks = [];
+const possibleR = ['healthy. <b>Mind that if I have symptoms, consulting a physician is still recommendable.</b>','suspicious (crackles)','suspicious (wheezes)','suspicious (crackles and wheezes)']
+// Access to the users microphone:
 navigator.mediaDevices.getUserMedia({audio:true})
-.then(stream => {handlerFunction(stream)})
-.catch((err) => { alert('error'); alert(err.name); alert(err.message); alert(MediaRecorder.isTypeSupported());});
-
-function handlerFunction(stream) {
-	t.forEach(function(v) { if (MediaRecorder.isTypeSupported(v)) { re = new MediaRecorder(stream, {mimeType:v}); } });
-	re.ondataavailable = e => {
-		audioChunks.push(e.data); // alert(e);
+.then(stream => { handlerF(stream); })
+.catch((err) => { alert(err.name + '\n' + err.message); });
+// Function that handles the stream:
+function handlerF(stream) {
+	mimeT.forEach(function(v) { if (MediaRecorder.isTypeSupported(v)) { re = new MediaRecorder(stream, {mimeType:v}); } });
+	re.ondataavailable = eventS => {
+		audioChunks.push(eventS.data); // alert(eventS);
 		if (re.state == 'inactive') {
 			let blob = new Blob(audioChunks, {type:re.mimeType}); // alert(blob);
 			a.src = URL.createObjectURL(blob); // alert(a.src);
 		}
 	}
+}
+//  START BUTTON Function:
+function startB() {
+    re.start();
+    document.getElementsByTagName('p')[0].innerHTML = '';
+    document.getElementById('one1').id = 'two1';
+    document.getElementById('one2').id = 'two2';
+    setTimeout(ende,16000);
+}
+// Ending function:
+function ende() {
+    re.stop();
+    var res = possibleR[Math.floor(Math.random()*4)];
+    document.getElementsByTagName('p')[0].innerHTML = 'Thank you. Your respiration sounds ' + res + '. You now can optionally download a copy of the record. For more accurate results, we recommend [link by Louis]';
+    document.getElementById('two1').remove();
+    var b = document.createElement('a'); b.href = a.src; b.target = '_blank'; b.download = 'LungSound.wav';
+	document.body.appendChild(b); b.click(); b.remove();
 }
 </script>
 </html>
